# quant-leaves-customer-support-chatbot-using-qdrant-openaiapi-docling-fastapi-nextjs

./: .gitignore  PLAN.md  README.md  RULES.md  TASKS.md  docker-compose.yml
backend/: Dockerfile  README.md  ingest.py  pyproject.toml
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/routes/: chat.py  health.py  ingest.py
backend/app/core/: logging.py  paths.py  settings.py
backend/app/db/: models.py  session.py  utils.py
backend/app/ingestion/: pipeline.py  types.py
backend/app/ingestion/loaders/: markdown_loader.py  openapi_loader.py  pdf_loader.py  structured_loader.py
backend/app/retrieval/: hybrid.py  structured.py  types.py  vector.py
backend/app/services/: chat.py  ingestion.py
backend/corpus/: world_bible.json
backend/corpus/api/: openapi.yaml
backend/corpus/eval/: eval_questions.json
backend/corpus/kb/: KB-0001_reset_password_sso.md  KB-0002_connect_data_source.md  KB-0003_understanding_rate_limits.md  KB-0004_compare_plans.md  KB-0005_export_data.md
backend/corpus/macros/: MAC-0001_agent_macros.md
backend/corpus/policies/: POL-0001_sla_and_credits.md  POL-0002_billing_and_refunds.md
backend/corpus/runbooks/: RB-0001_triage_login_and_sso.md  RB-0002_triage_rate_limit_exceeded.md
backend/corpus/structured/: error_codes.json  plan_matrix.csv  products.csv
backend/tests/: test_app_smoke.py
docs/: local_dev.md
frontend/: Dockerfile  README.md
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: AdminPanel.tsx  ChatContainer.tsx  ChatInput.tsx  ChatMessage.tsx  ErrorBoundary.tsx  (+1 more)
(+1 files in other folders)
