[project]
name = "quantleaves-support-backend"
version = "0.1.0"
description = "FastAPI backend for the QuantLeaves RAG support assistant"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "asyncpg>=0.30.0",
    "docling>=2.52.0",
    "fastapi>=0.116.1",
    "greenlet>=3.2.4",
    "httpx>=0.28.1",
    "langchain>=0.3.27",
    "langchain-community>=0.3.29",
    "langchain-openai>=0.3.33",
    "pgvector>=0.4.1",
    "pydantic-settings>=2.10.1",
    "python-dotenv>=1.1.1",
    "sqlalchemy>=2.0.43",
    "uvicorn[standard]>=0.35.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
]

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
